Не очень удачная попытка

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,20 @@ course_project/course_project_test.csv
 course_project/course_project_train.csv
 lesson01.mp4
 training_project_data.csv
+1/.ipynb_checkpoints/Lesson01-checkpoint.ipynb
+2/Lesson02.html
+2/Lesson02.ipynb
+2/normal_distr.png
+3/balancing.png
+3/cross_val.png
+3/knn.png
+3/Lesson03.html
+3/Lesson03.ipynb
+3/log_reg.png
+3/rf.jpg
+3/svm.png
+course_project/.ipynb_checkpoints/course project-checkpoint.ipynb
+course_project/.ipynb_checkpoints/guilch-checkpoint.ipynb
+course_project/guilch.ipynb
+lesson02.mp4
+lesson03.mp4
