--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ course_project/.ipynb_checkpoints/guilch-checkpoint.ipynb
 course_project/guilch.ipynb
 lesson02.mp4
 lesson03.mp4
+4/bias.png
+4/Lesson04.html
+4/Lesson04.ipynb
+4/overfitting.svg
+lesson04.mp4
